Get up-to-date ip addresses and add a channel switch script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Script for testing uptime of holoports assigned for test",
   "main": "src/index.js",
   "bin": {
-    "test-holoports-monitor": "src/index.js"
+    "test-holoports-monitor": "src/index.js",
+    "test-holoports-switcher": "src/switcher.js"
   },
   "repository": "https://github.com/Holo-Host/test-holoports-monitor.git",
   "author": "peeech <pj@imagine-nyc.com>",
